# dragonpen-journal

./: README.md  docker-compose.yaml  ec2-deploy.sh  journaling.code-workspace  tmux-dev.sh
cdk/: .env  .env.production  .env.staging  .gitignore  cdk.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
cdk/lib/: env.ts  (+6 more)
deployment/: docker-compose.yaml  startup.sh  update-config.sh
env/: index.js  package-lock.json  package.json
journaling-client/: .env  .gitignore  apollo.config.js  babel.config.js  codegen.yml  index.html  jest.config.js  package-lock.json  package.json  tmux-dev.sh  tsconfig.json  vite.config.ts
journaling-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  codegen.yml  index.ts  knexfile.ts  package-lock.json  package.json  tmux-dev.sh  tsconfig.json  types.d.ts
journaling-server-node/: graphql.schema.json  index.ts  package-lock.json  package.json
journaling-server/dev/: repl.js
journaling-server/gql/: Cargo.toml
journaling-server/gql/src/: lib.rs
journaling-server/migrations/: 20200731155617_journal_entry_table.ts
journaling-server/model/: Cargo.toml
journaling-server/model/src/: lib.rs
journaling-server/scripts/: get-schema.js  repl.js
journaling-server/src/: main.rs  model.ts  schema.ts  types.d.ts
journaling-server/src/handlers/: gql.ts  hello.ts
journaling-server/src/model/: dynamo-client.ts  elastic-client.ts  index.ts  journal-entry.ts  knex-client.ts  util.ts
journaling-server/src/server/: checkJwt.ts  installApolloServer.ts
journaling-server/src/utils/: lambdaToExpress.ts
(+55 files in other folders)
