[package]
name = "journaling-server"
version = "0.1.0"
authors = ["Dallon Feldner <dallon.feldner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.scripts]
"server" = "systemfd --no-pid -s http::4000 -- cargo watch -x run"

[workspace]
members= [
  "gql",
  "model"
]

[dependencies]
gql = { path = "./gql" }
model = { path = "./model" }
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
actix-cors = "0.2.0"
async-graphql-actix-web = "=1.4.17"
async-graphql = "=1.16.11"