[package]
name = "gql"
version = "0.1.0"
authors = ["Dallon Feldner <dallon.feldner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
async-graphql = "=1.16.11"
lazy_static = "1.4"
actix-rt = "1.0"
serde_json = "1.0"
